--- a/mock-auth-service/src/templates/film_together.html
+++ b/mock-auth-service/src/templates/film_together.html
@@ -8,20 +8,34 @@
 		<!-- Film 1 -->
 		<div class=" t1 col-sm-6 col-md-6 col-lg-2 mb-10 mt-2">
 			<img src="{{ url_for('static', path='/img/t1.png') }}" class="img-fluid rounded" alt="t1">
-			<button class="btn btn-primary mt-2" onclick="createParty(event)" id="ff083bff-ab7f-4b87-a61f-5678c1d328e5">Watch together</button>
+			<button class="btn btn-primary mt-2" onclick="createParty(event)" id="ff083bff-ab7f-4b87-a61f-5678c1d328e6">Watch together</button>
 		</div>
 		<div class=" t1 col-sm-6 col-md-6 col-lg-4 mb-10 mt-2">
 			<div>A human soldier is sent from 2029 to 1984 to stop an almost indestructible cyborg killing machine, sent from the same year, which has been programmed to execute a young woman whose unborn son is the key to humanity's future salvation.
 			</div>
 		</div>
 		<!-- Film 2 -->
+<!--		<div class=" t2 col-sm-6 col-md-6 col-lg-2 mb-10 mt-2">-->
+<!--			<img src="{{ url_for('static', path='/img/t2.png') }}" class="img-fluid rounded" alt="t1">-->
+<!--			<button class="btn btn-primary mt-2" onclick="createQueue(event)" id="ff083bff-ab7f-4b87-a61f-5678c1d328e5">Watch together</button>-->
+<!--		</div>-->
+<!--		<div class=" t2 col-sm-6 col-md-6 col-lg-4 mb-10 mt-2">-->
+<!--			<div>A cyborg, identical to the one who failed to kill Sarah Connor, must now protect her ten year old son John from an even more advanced and powerful cyborg.-->
+<!--			</div>-->
+<!--		</div>-->
+		<!-- Film 2 -->
 		<div class=" t2 col-sm-6 col-md-6 col-lg-2 mb-10 mt-2">
-			<img src="{{ url_for('static', path='/img/t2.png') }}" class="img-fluid rounded" alt="t1">
-			<button class="btn btn-primary mt-2" onclick="createParty(event)" id="ff285a7d-6d87-41a2-9573-09558c3efac7">Watch together</button>
+			<form action="http://localhost:8001/queue-manager-service/api/v1/queues/film_together", method="post">
+				<img src="{{ url_for('static', path='/img/t2.png') }}" class="img-fluid rounded" alt="t1">
+				<div>A cyborg, identical to the one who failed to kill Sarah Connor, must now protect her ten year old son John from an even more advanced and powerful cyborg.
+				</div>
+				<input type="text" name="film_id" value="ff083bff-ab7f-4b87-a61f-5678c1d328e5" hidden>
+				<input class="btn btn-primary mt-2" type="submit" id="ff083bff-ab7f-4b87-a61f-5678c1d328e5" value="Watch together">
+			</form>
+
 		</div>
 		<div class=" t2 col-sm-6 col-md-6 col-lg-4 mb-10 mt-2">
-			<div>A cyborg, identical to the one who failed to kill Sarah Connor, must now protect her ten year old son John from an even more advanced and powerful cyborg.
-			</div>
+
 		</div>
 	</div>
 </div>
@@ -48,6 +62,26 @@
         .then(response => response.json())
         .then(data => {
             window.location.replace(data['redirect_url']);
+            // window.location.replace('http://localhost/party-manager-service/api/v1/stream/06547b75-6593-44c2-b4f8-47b4f0b9e426');
+        })
+    };
+
+	function createQueue(event) {
+        user_id = document.querySelector('#user_id').value;
+        film_id = event.srcElement.id;
+
+        fetch('http://localhost:8001/queue-manager-service/api/v1/queues/film_together', {
+            method: 'POST',
+            headers: {
+            	'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({"film_id": film_id})
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data)
+
+            //window.location.replace(data['redirect_url']);
             // window.location.replace('http://localhost/party-manager-service/api/v1/stream/06547b75-6593-44c2-b4f8-47b4f0b9e426');
         })
     };
